[package]
name = "to_done"
version = "0.1.0"
authors = ["Alex Day <alex@alexday.me>"]
edition = "2018"
description = "A simple, command line todo application"
repository = "https://github.com/AlexanderDavid/todo"
readme = "readme.md"
keywords = ["productivity", "todo", "cli"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "todo"
path="src/main.rs"

[dependencies]
clap = "2.33.0"
termion = "1.5.5"
dirs = "2.0"
chrono = "0.4"
chrono-english = "0.1.4"
regex = "1"
lazy_static = "1.4.0"
prettytable-rs = "^0.8"

